; ModuleID = '/home/carl/AnghaBench/RetroArch/wii/libogc/libogc/extr_semaphore.c___lwp_sema_allocate.c'
source_filename = "/home/carl/AnghaBench/RetroArch/wii/libogc/libogc/extr_semaphore.c___lwp_sema_allocate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@_lwp_sema_objects = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.TYPE_3__* ()* @__lwp_sema_allocate to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.TYPE_3__* @__lwp_sema_allocate() #0 {
  %1 = alloca %struct.TYPE_3__*, align 8
  %2 = alloca %struct.TYPE_3__*, align 8
  %3 = call i32 (...) @__lwp_thread_dispatchdisable()
  %4 = call i64 @__lwp_objmgr_allocate(i32* @_lwp_sema_objects)
  %5 = inttoptr i64 %4 to %struct.TYPE_3__*
  store %struct.TYPE_3__* %5, %struct.TYPE_3__** %2, align 8
  %6 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %7 = icmp ne %struct.TYPE_3__* %6, null
  br i1 %7, label %8, label %13

8:                                                ; preds = %0
  %9 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %10 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %9, i32 0, i32 0
  %11 = call i32 @__lwp_objmgr_open(i32* @_lwp_sema_objects, i32* %10)
  %12 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  store %struct.TYPE_3__* %12, %struct.TYPE_3__** %1, align 8
  br label %15

13:                                               ; preds = %0
  %14 = call i32 (...) @__lwp_thread_dispatchenable()
  store %struct.TYPE_3__* null, %struct.TYPE_3__** %1, align 8
  br label %15

15:                                               ; preds = %13, %8
  %16 = load %struct.TYPE_3__*, %struct.TYPE_3__** %1, align 8
  ret %struct.TYPE_3__* %16
}

declare dso_local i32 @__lwp_thread_dispatchdisable(...) #1

declare dso_local i64 @__lwp_objmgr_allocate(i32*) #1

declare dso_local i32 @__lwp_objmgr_open(i32*, i32*) #1

declare dso_local i32 @__lwp_thread_dispatchenable(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
